--- a/style.css
+++ b/style.css
@@ -7,7 +7,10 @@
 
 /* ===================== TOÀN TRANG ===================== */
 body {
-  font-family: 'Roboto', sans-serif;
+
+    font-family: 'Work Sans', sans-serif;
+
+
   background: linear-gradient(180deg, #ffe4ec 0%, #fff8fb 100%);
   display: flex;
   justify-content: center;
@@ -15,6 +18,7 @@ body {
   min-height: 100vh;
   padding: 20px;
   overflow-x: hidden;
+  
 }
 
 /* ===================== CARD ===================== */
@@ -39,9 +43,9 @@ body {
 
 /* ===================== HEADER ===================== */
 .invite-title {
-  font-family: 'Great Vibes', cursive;
+  font-family: 'Work Sans', sans-serif;
   font-size: clamp(1.2rem, 5vw, 1.8rem);
-  color: #ff8bb3;
+  color: #d84c78;
   text-shadow: 0 2px 4px rgba(255,192,203,0.6);
   margin-bottom: 5px;
   opacity: 0;
@@ -50,9 +54,9 @@ body {
 }
 
 .main-title {
-  font-size: clamp(1.3rem, 5.5vw, 1.9rem);
+  font-family: 'Pacifico', cursive;
   font-weight: 700;
-  color: #ff5c8a;
+  color: #ff6fa4;
   letter-spacing: 3px;
   text-shadow: 0 3px 6px rgba(255, 182, 193, 0.8);
   margin-bottom: 20px;
@@ -97,28 +101,38 @@ body {
 
 .text-blue {
   color: #ff7fa8;
-  font-weight: 500;
+  font-weight: bold;
   margin-bottom: 5px;
-  font-size: clamp(0.8rem, 2.5vw, 1rem);
+  font-size: 26px;
+  font-family: 'Work Sans', sans-serif;
 }
+.text-guard{
+    font-family: 'Work Sans', sans-serif;
 
+  font-size: clamp(1.2rem, 4vw, 1.5rem);
+  color: #d81b60;
+  font-weight: 600;
+  margin-bottom: 5px;
+}
 .text-highlight {
-  font-family: 'Dancing Script', cursive;
+  font-family: 'Pacifico', cursive;
   font-size: clamp(1.4rem, 5vw, 2rem);
   color: #d63384;
   margin-bottom: 5px;
 }
 
 .guest-name {
+  font-family: 'Monsieur La Doulaise', cursive;
   font-weight: 700;
-  color: #d81b60;
-  margin-top: 5px;
+  color: #d64570;
   letter-spacing: 1px;
-  font-size: clamp(1rem, 4vw, 1.2rem);
+  font-size: clamp(2rem, 6vw, 1.5rem);
 }
 
 /* ===================== THÔNG TIN SỰ KIỆN ===================== */
 .card-info {
+    font-family: 'Work Sans', sans-serif;
+
   font-size: clamp(0.75rem, 2.5vw, 0.9rem);
   color: #6b2737;
   line-height: 1.6;
@@ -132,6 +146,8 @@ body {
 
 /* ===================== LỜI NHẮN ===================== */
 .card-message {
+    font-family: 'Work Sans', sans-serif;
+
   margin-bottom: 30px;
   color: #642b42;
   font-size: clamp(0.8rem, 2.5vw, 0.95rem);
@@ -139,6 +155,8 @@ body {
 }
 
 .thanks {
+    font-family: 'Pacifico', cursive;
+
   color: #d63384;
   font-weight: 600;
   margin-top: 10px;
